# server/internal/contracts/openapi_types.gen.go
@@ -3,11 +3,7 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.2 DO NOT EDIT.
 package contracts
 
-import (
-	"do-your-dailies/server/internal/utctime"
-
-	openapi_types "github.com/oapi-codegen/runtime/types"
-)
+import "do-your-dailies/server/internal/utctime"
 
 // Chore defines model for Chore.
 type Chore struct {
@@ -55,7 +51,8 @@ type UpdateChoreRequest struct {
 
 // ListChoreCompletionsParams defines parameters for ListChoreCompletions.
 type ListChoreCompletionsParams struct {
-	Date *openapi_types.Date `form:"date,omitempty" json:"date,omitempty"`
+	Start utctime.Time `form:"start" json:"start"`
+	End   utctime.Time `form:"end" json:"end"`
 }
 
 // ListChoreQueueParams defines parameters for ListChoreQueue.
